--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ quarkus:
 
   datasource:
     db-kind: oracle
-    username: admin
+    username: aaa
     password: Aaa!89nky78D
     reactive:
       url: oracle:thin:@localhost:1522/ORCL
