--- a/src/main/resources/application-telco_aaa_dev.yml
+++ b/src/main/resources/application-telco_aaa_dev.yml
@@ -7,7 +7,7 @@ quarkus:
 
   datasource:
     db-kind: oracle
-    username: admin
+    username: aaa
     password: Aaa!89nky78D
     reactive:
       url: oracle:thin:@aaa-dev.cn8eyeqma3tp.ap-southeast-2.rds.amazonaws.com:1521/ORCL
